--- a/gemc-build/Dockerfile
+++ b/gemc-build/Dockerfile
@@ -1,4 +1,4 @@
-FROM tylern4/gemc-base
+FROM tylern4/gemc-base:latest
 
 ENV JLAB_ROOT /opt/jlab_software
 ENV JLAB_VERSION devel
@@ -16,10 +16,10 @@ RUN apt-get update -y \
       graphviz-dev libavahi-compat-libdnssd-dev \
       libldap2-dev python-dev libxml2-dev libkrb5-dev \
       libgsl0-dev python-pip wget curl python-tk \
-      scons libxmu-dev libx11-dev libclhep-dev libxerces-c3-dev \
+      scons libxmu-dev libx11-dev \
       freeglut3-dev libmotif-dev tk-dev libxi-dev tcsh csh bc \
     && apt-get clean
-
+#libclhep-dev libxerces-c3-dev
 
 ## QT 5.8
 ENV QT_VERSION 5.8.0
@@ -38,40 +38,66 @@ RUN wget https://github.com/root-project/root/archive/v$ROOTV_SLASH.tar.gz \
     && rm -rf v$ROOTV_SLASH.tar.gz \
     && cd root-$ROOTV_SLASH \
     && mkdir compile && cd compile \
-    && cmake -DCMAKE_INSTALL_PREFIX=$ROOTSYS \
+    && cmake -DCMAKE_INSTALL_PREFIX=$ROOTSYS -DCMAKE_CXX_FLAGS=-fPIC \
     -Droofit=ON -Dminuit2=ON -Dpython=ON \
     .. \
     && make -j$(nproc) && make install
 
+##CLHEP
+ENV CLHEP_VERSION 2.3.4.3
+ENV CLHEP_BASE_DIR $JLAB_SOFTWARE/clhep/$CLHEP_VERSION
+
+RUN mkdir -p $CLHEP_BASE_DIR \
+    && cd $CLHEP_BASE_DIR/.. \
+    && rm -rf build && mkdir build \
+    && rm -rf source && mkdir source \
+    && cd source \
+    && wget $BASE_URL/clhep/clhep-$CLHEP_VERSION.tgz \
+    && tar -zxpvf clhep-$CLHEP_VERSION.tgz \
+    && rm -rf clhep-$CLHEP_VERSION.tgz \
+    && cd $CLHEP_BASE_DIR/../build \
+  	&& cmake -DCMAKE_INSTALL_PREFIX=$CLHEP_BASE_DIR -DCMAKE_CXX_FLAGS=-fPIC $CLHEP_BASE_DIR/../source/$CLHEP_VERSION/CLHEP \
+    && make -j$(nproc) && make install
+
+## xercesc
+ENV XERCESC_VERSION 3.1.4
+ENV XERCESCROOT $JLAB_SOFTWARE/xercesc/$XERCESC_VERSION
+
+RUN wget $BASE_URL/xercesc/xerces-c-$XERCESC_VERSION.tar.gz \
+    && tar -xvf xerces-c-$XERCESC_VERSION.tar.gz \
+    && rm -rf xerces-c-$XERCESC_VERSION.tar.gz \
+    && cd xerces-c-$XERCESC_VERSION \
+    && ./configure -prefix=$XERCESCROOT \
+    && make -j $(nproc) && make install
+
 ## geant4
 ENV GEANT4_VERSION 4.10.02.p03
 ENV G4INSTALL $JLAB_SOFTWARE/geant4/$GEANT4_VERSION
+ENV GEANT4_DOWNLOAD http://geant4.web.cern.ch/geant4/support/source/geant$GEANT4_VERSION.tar.gz
+ENV G4DATA_VERSION 10.3.0
+ENV Geant4_DIR $JLAB_SOFTWARE/geant4/$GEANT4_VERSION/lib/Geant4-10.2.3
 
-RUN mkdir -p $G4INSTALL \
-    cd $G4INSTALL \
-    && wget $BASE_URL/geant4/geant$GEANT4_VERSION.tar.gz \
-    && tar -zxpvf geant$GEANT4_VERSION.tar.gz \
-    && cd geant$GEANT4_VERSION \
-    && rm -rf build && mkdir build && cd build \
-    && cmake -DCMAKE_INSTALL_PREFIX=$G4INSTALL \
-                  -DGEANT4_INSTALL_DATA=ON \
-  								-DGEANT4_USE_GDML=ON \
-  								-DXERCESC_ROOT_DIR=$XERCESCROOT \
-  								-DGEANT4_USE_QT=ON \
-  								-DQT_QMAKE_EXECUTABLE=$QTDIR/bin/qmake \
-  								-DCMAKE_INSTALL_DATAROOTDIR=$G4INSTALL/data \
-  								-DCLHEP_ROOT_DIR=$CLHEP_BASE_DIR \
-  								-DGEANT4_INSTALL_DATA=$DATA \
-  								-DGEANT4_BUILD_EXAMPLES=OFF \
-                  -DGEANT4_USE_OPENGL_X11=ON \
-  								-DCMAKE_CXX_FLAGS=-I$QTDIR/include \
-                  -I$QTDIR/include/QtOpenGL \
-                  -I$QTDIR/include/QtWidgets \
-                  -I$QTDIR/include/QtGui \
-                  -I$QTDIR/include/QtCore \
-                  -I$QTDIR/include/QtPrintSupport \
-                  "-W -Wall -pedantic -Wno-non-virtual-dtor -Wno-long-long -Wwrite-strings -Wpointer-arith -Woverloaded-virtual -pipe" \
-                  ..
+COPY scripts /opt/jlab_software/devel
+RUN cd /opt/jlab_software/devel \
+    && tcsh go_geant4
+
+#RUN mkdir -p $G4INSTALL/source \
+#    && cd $G4INSTALL/source \
+#    && wget $GEANT4_DOWNLOAD \
+#    && tar -zxpvf geant$GEANT4_VERSION.tar.gz \
+#    && cd geant$GEANT4_VERSION \
+#    && rm -rf build && mkdir build && cd build \
+#    && cmake -DGEANT4_USE_OPENGL_X11=ON \
+#        -DCMAKE_INSTALL_PREFIX=$G4INSTALL \
+#        -DGEANT4_USE_GDML=ON \
+#        -DGEANT4_USE_QT=ON \
+#        -DQT_QMAKE_EXECUTABLE=$QTDIR/bin/qmake \
+#        -DGEANT4_INSTALL_DATA=ON \
+#        -DGEANT4_BUILD_EXAMPLES=OFF \
+#        -DCMAKE_CXX_FLAGS=-I$QTDIR/include -I$QTDIR/include/QtOpenGL -I$QTDIR/include/QtWidgets -I$QTDIR/include/QtGui -I$QTDIR/include/QtCore -I$QTDIR/include/QtPrintSupport -W -Wall -pedantic -Wno-non-virtual-dtor -Wno-long-long -Wwrite-strings -Wpointer-arith -Woverloaded-virtual -pipe \
+#      .. \
+#    && make -j$(nproc) && make install
+
 
 ## scons
 ENV SCONS_BM_VERSION devel
@@ -109,7 +135,7 @@ RUN mkdir -p $JLAB_SOFTWARE/mysql \
 
 ## CCDB
 ENV CCDB_VERSION 1.06.02
-ENV CCDB_HOME /usr/local/jlab_software/x86_64/devel/ccdb/ccdb-1.06.02
+ENV CCDB_HOME $JLAB_SOFTWARE/ccdb/ccdb-$CCDB_VERSION
 ENV CCDB_USER root
 
 RUN mkdir -p $JLAB_SOFTWARE/ccdb \
@@ -119,8 +145,7 @@ RUN mkdir -p $JLAB_SOFTWARE/ccdb \
     && rm -rf ccdb-$CCDB_VERSION.tar.gz \
     && cd $JLAB_SOFTWARE/ccdb/ccdb-$CCDB_VERSION \
     && scons -j$(nproc) \
-    && mkdir -p $CCDB_HOME \
-    && cp -r $JLAB_SOFTWARE/ccdb/ccdb-$CCDB_VERSION $CCDB_HOME
+    && mkdir -p $CCDB_HOME
 
 ## mlibrary
 ENV GIT_SSL_NO_VERIFY fals
@@ -133,10 +158,11 @@ RUN mkdir -p $JLAB_SOFTWARE/mlibrary \
     && tar -zxpvf mlibrary-$MLIBRARY_VERSION.tar.gz \
     && rm -rf mlibrary-$MLIBRARY_VERSION.tar.gz \
     && cd $JLAB_SOFTWARE/mlibrary/$MLIBRARY_VERSION \
-    && scons -j$(nproc) OPT=1 \
+    && scons -j$(nproc) OPT=1 -fPIC \
+    && git clone https://github.com/christopherpoole/CADMesh.git cadmesh \
     && mkdir cadmeshBuild \
     && cd cadmeshBuild \
-    && cmake3 ../cadmesh -DCMAKE_INSTALL_PREFIX:PATH=$MLIBRARY -DCMAKE_PREFIX_PATH=$JLAB_SOFTWARE/geant4/$GEANT4_VERSION \
+    && cmake ../cadmesh -DCMAKE_CXX_FLAGS=-fPIC -DCMAKE_INSTALL_PREFIX:PATH=$MLIBRARY -DCMAKE_PREFIX_PATH=$JLAB_SOFTWARE/geant4/$GEANT4_VERSION \
     && make -j$(nproc) \
     && make install
 
@@ -144,14 +170,18 @@ RUN mkdir -p $JLAB_SOFTWARE/mlibrary \
 ENV GEMC_VERSION devel
 ENV GEMC $JLAB_SOFTWARE/gemc/$GEMC_VERSION
 
-RUN rm -rf $JLAB_SOFTWARE/gemc/$GEMC_VERSION \
-    && mkdir -p $JLAB_SOFTWARE/gemc \
-    && cd $JLAB_SOFTWARE/gemc \
-    && wget $BASE_URL/gemc/gemc-$GEMC_VERSION.tar.gz \
-    && tar -zxpvf gemc-$GEMC_VERSION.tar.gz \
-    && rm -rf gemc-$GEMC_VERSION.tar.gz \
-    && cd $GEMC_VERSION \
-    && scons -j$(nproc) LIBRARY=shared OPT=1
+COPY scripts /opt/jlab_software/devel
+RUN cd /opt/jlab_software/devel \
+    && tcsh go_gemc
+
+#RUN rm -rf $JLAB_SOFTWARE/gemc/$GEMC_VERSION \
+#    && mkdir -p $JLAB_SOFTWARE/gemc \
+#    && cd $JLAB_SOFTWARE/gemc \
+#    && wget $BASE_URL/gemc/gemc-$GEMC_VERSION.tar.gz \
+#    && tar -zxpvf gemc-$GEMC_VERSION.tar.gz \
+#    && rm -rf gemc-$GEMC_VERSION.tar.gz \
+#    && cd $GEMC_VERSION \
+#    && scons -j$(nproc) OPT=1
 
 ## Fields
 RUN mkdir -p $JLAB_ROOT/noarch/data \
@@ -159,8 +189,6 @@ RUN mkdir -p $JLAB_ROOT/noarch/data \
     && rm -rf srr* clas12* \
     && wget http://clasweb.jlab.org/12gev/field_maps/clas12SolenoidFieldMap.dat \
     && wget http://clasweb.jlab.org/12gev/field_maps/clas12TorusOriginalMap.dat
-
-
 
 
 COPY cshrc /root/.cshrc
