I think it works

--- a/gemc-build/Dockerfile
+++ b/gemc-build/Dockerfile
@@ -1,6 +1,6 @@
 #FROM tylern4/gemc-base:latest
 FROM ubuntu:17.10
-ENV TERM xterm-256color
+ENV TERM xterm
 
 ENV JLAB_ROOT /opt/jlab_software
 ENV JLAB_VERSION devel
@@ -9,6 +9,7 @@ ENV BASE_URL https://www.jlab.org/12gev_phys/packages/sources
 RUN mkdir -p $JLAB_SOFTWARE
 
 ENV QTDIR /usr/include/x86_64-linux-gnu/qt5
+ENV PKG_CONFIG_PATH /usr/lib/x86_64-linux-gnu/pkgconfig
 
 ENV G4DATA_VERSION devel
 ENV CLHEP_VERSION devel
@@ -27,13 +28,14 @@ ENV G4INSTALL $JLAB_SOFTWARE/geant4
 ENV EVIO $JLAB_SOFTWARE/evio
 ENV MYSQL $JLAB_SOFTWARE/mysql
 ENV XERCESCROOT $JLAB_SOFTWARE/xercesc
-ENV CCDB_HOME $JLAB_SOFTWARE/ccdb
+ENV CCDB_HOME $JLAB_SOFTWARE/CCDB
 ENV MLIBRARY $JLAB_SOFTWARE/mlibrary
 ENV GEMC $JLAB_SOFTWARE/gemc
 ENV JANA_HOME $JLAB_SOFTWARE/jana
 ENV SCONS_BM $JLAB_SOFTWARE/scons_bm
+ENV BANKS $JLAB_SOFTWARE/banks
+
 ENV PYTHONPATH $PYTHONPATH:$SCONS_BM
-ENV BANKS $JLAB_SOFTWARE/banks/$BANKS_VERSION
 
 RUN apt-get update -y \
     && apt-get -y install qt5-default qt5-qmake zsh perl git dpkg-dev cmake g++ gcc \
@@ -48,31 +50,44 @@ RUN apt-get update -y \
       freeglut3-dev libmotif-dev tk-dev libxi-dev tcsh csh bc \
     && rm -rf /var/lib/apt/lists/*
 
-## ROOT
-ENV ROOTV_DOT 6.08.04
-ENV ROOTV_SLASH 6-08-04
-ENV ROOTSYS $JLAB_SOFTWARE/root/$ROOTV_DOT
+## mysql
+ENV MYSQL $JLAB_SOFTWARE/mysql
+ENV MYSQBIN $MYSQL/bin
+ENV MYSQINC $MYSQL/include
+ENV MYSQLIB $MYSQL/lib
+ENV MYSQLINC $MYSQL/include
+ENV MYSQL_INCLUDE_PATH $MYSQL/include
+ENV MYSQL_LIB_PATH $MYSQL/lib
 
-RUN curl -o v$ROOTV_SLASH.tar.gz https://codeload.github.com/root-project/root/tar.gz/v$ROOTV_SLASH \
-    && tar -zxpvf v$ROOTV_SLASH.tar.gz \
-    && rm -rf v$ROOTV_SLASH.tar.gz \
-    && cd root-$ROOTV_SLASH \
+RUN mkdir -p $JLAB_SOFTWARE/mysql \
+    && ln -sfn /usr/lib/x86_64-linux-gnu $JLAB_SOFTWARE/mysql/lib \
+    && ln -sfn /usr/include/mysql $JLAB_SOFTWARE/mysql/include
+
+## ROOT
+ENV ROOT_VERSION 6-08-04
+ENV ROOTSYS $JLAB_SOFTWARE/root/$ROOT_VERSION
+RUN curl -o v$ROOT_VERSION.tar.gz https://codeload.github.com/root-project/root/tar.gz/v$ROOT_VERSION \
+    && tar -zxpvf v$ROOT_VERSION.tar.gz \
+    && rm -rf v$ROOT_VERSION.tar.gz \
+    && cd root-$ROOT_VERSION \
     && mkdir compile && cd compile \
     && cmake -DCMAKE_INSTALL_PREFIX=$ROOTSYS -DCMAKE_CXX_FLAGS=-fPIC \
     -Droofit=ON -Dminuit2=ON -Dpython=ON .. \
     && make -j$(nproc) && make install \
-    && rm -rf $JLAB_SOFTWARE/root/root-$ROOTV_SLASH
+    && rm -rf $JLAB_SOFTWARE/root/root-$ROOT_VERSION
 
 ## scons
-ENV SCONS_BM_VERSION devel
-ENV SCONSFLAGS --site-dir=$JLAB_ROOT/$JLAB_VERSION/scons_bm/$SCONS_BM_VERSION
+ENV SCONSFLAGS --site-dir=$SCONS_BM
+RUN git clone https://github.com/maureeungaro/scons_bm.git $SCONS_BM \
+    && rm -rf $SCONS_BM/.git*
 
-RUN rm -rf $JLAB_ROOT/$JLAB_VERSION/scons_bm/$SCONS_BM_VERSION \
-    && mkdir -p $JLAB_ROOT/$JLAB_VERSION/scons_bm/ \
-    && cd $JLAB_ROOT/$JLAB_VERSION/scons_bm/ \
-    && curl -o scons_bm-$SCONS_BM_VERSION.tar.gz $BASE_URL/scons_bm/scons_bm-$SCONS_BM_VERSION.tar.gz \
-    && tar -zxpvf scons_bm-$SCONS_BM_VERSION.tar.gz \
-    && rm -rf scons_bm-$SCONS_BM_VERSION.tar.gz
+## EVIO
+ENV EVIO_VERSION 5.1
+RUN mkdir -p $EVIO && cd $EVIO \
+    && curl -o evio-$EVIO_VERSION.tar.gz $BASE_URL/evio/evio-$EVIO_VERSION.tar.gz \
+    && tar -xvf evio-$EVIO_VERSION.tar.gz --strip-components 1 \
+    && rm -rf evio-$EVIO_VERSION.tar.gz \
+    && scons -j$(nproc)
 
 ##CLHEP
 RUN mkdir -p $CLHEP_BASE_DIR \
@@ -95,7 +110,6 @@ RUN mkdir -p $XERCESCROOT \
     && rm -rf $XERCESCROOT/github-source
 
 ## geant4
-#              -DQT_QMAKE_EXECUTABLE=$QTDIR/bin/qmake \
 RUN mkdir -p $G4INSTALL \
     && cd $G4INSTALL \
     && git clone https://github.com/Geant4/geant4.git $G4INSTALL/github-source \
@@ -115,122 +129,60 @@ RUN mkdir -p $G4INSTALL \
     && make install \
     && rm -rf $G4INSTALL/github-source
 
-## EVIO
-ENV EVIO_VERSION 5.1
-RUN mkdir -p $EVIO && cd $EVIO \
-    && curl -o evio-$EVIO_VERSION.tar.gz $BASE_URL/evio/evio-$EVIO_VERSION.tar.gz \
-    && tar -xvf evio-$EVIO_VERSION.tar.gz --strip-components 1
-
-COPY CMakeLists_evio.txt $EVIO/CMakeLists.txt
-
-RUN mkdir -p $EVIO/build && cd $EVIO/build \
-    && cmake .. -DCMAKE_INSTALL_PREFIX=$EVIO \
-    && make -j$(nproc) \
-    && mkdir $EVIO/lib \
-    && mv lib* $EVIO/lib
-
-## mysql
-ENV MYSQL $JLAB_SOFTWARE/mysql
-ENV MYSQBIN $MYSQL/bin
-ENV MYSQINC $MYSQL/include
-ENV MYSQLIB $MYSQL/lib
-ENV MYSQLINC $MYSQL/include
-ENV MYSQL_INCLUDE_PATH $MYSQL/include
-ENV MYSQL_LIB_PATH $MYSQL/lib
-
-RUN mkdir -p $JLAB_SOFTWARE/mysql \
-    && ln -sfn /usr/lib/x86_64-linux-gnu $JLAB_SOFTWARE/mysql/lib \
-    && ln -sfn /usr/include/mysql $JLAB_SOFTWARE/mysql/include
-
-## CCDB
-RUN git clone https://github.com/JeffersonLab/ccdb.git $CCDB_HOME \
+## CCDB_HOME
+RUN git clone https://github.com/JeffersonLab/CCDB.git $CCDB_HOME \
     && cd $CCDB_HOME \
+    && rm -rf .git* \
     && scons -j$(nproc)
+
 
 ENV LD_LIBRARY_PATH $LD_LIBRARY_PATH:$CCDB_HOME/lib
 ENV PATH $PATH:$CCDB_HOME/bin
 ENV PYTHONPATH $PYTHONPATH:$CCDB_HOME/python
 
-## mlibrary
-RUN mkdir -p $MLIBRARY && cd $MLIBRARY \
-    && git clone https://github.com/gemc/mlibrary.git github-source
-COPY CMakeLists_mlibrary.txt $MLIBRARY/github-source/CMakeLists.txt
-RUN cd $MLIBRARY/github-source \
-    && mkdir build && cd build \
-    && cmake .. -DCMAKE_INSTALL_PREFIX=$MLIBRARY \
-    && make -j$(nproc) \
-    && make install && mv $MLIBRARY/include/*/* $MLIBRARY/include/
 
 ENV CADMESH $JLAB_SOFTWARE/cadmesh
 RUN git clone -b v1.1 https://github.com/christopherpoole/CADMesh.git  $CADMESH/github-source \
     && mkdir -p $CADMESH/build && cd $CADMESH/build \
-    && cmake $CADMESH/github-source -DCMAKE_CXX_FLAGS=-fPIC -DCMAKE_INSTALL_PREFIX:PATH=$CADMESH -DCMAKE_PREFIX_PATH=$G4INSTALL \
+    && cmake $CADMESH/github-source -DCMAKE_CXX_FLAGS=-fPIC -DCMAKE_PREFIX_PATH=$G4INSTALL \
     && make -j$(nproc) \
-    && make install
+    && make install \
+    && rm -rf $CADMESH/github-source
 
-#RUN cd $MLIBRARY \
-#    && git clone https://github.com/christopherpoole/CADMesh.git cadmesh-source \
-#    && mkdir cadmeshBuild \
-#    && cd cadmeshBuild \
-#    && cmake ../cadmesh-source -DCMAKE_CXX_FLAGS=-fPIC -DCMAKE_INSTALL_PREFIX:PATH=$MLIBRARY -DCMAKE_PREFIX_PATH=$JLAB_SOFTWARE/geant4/$GEANT4_VERSION \
-#    && make \
-#    && make install
-
-#RUN mkdir -p $JLAB_SOFTWARE/mlibrary \
-#    && cd $JLAB_SOFTWARE/mlibrary \
-#    && curl -o mlibrary-$MLIBRARY_VERSION.tar.gz $BASE_URL/mlibrary/mlibrary-$MLIBRARY_VERSION.tar.gz \
-#    && tar -zxpvf mlibrary-$MLIBRARY_VERSION.tar.gz \
-#    && rm -rf mlibrary-$MLIBRARY_VERSION.tar.gz \
-#    && cd $JLAB_SOFTWARE/mlibrary/$MLIBRARY_VERSION \
-#    && scons -j$(nproc) OPT=1 -fPIC \
-    #&& git clone https://github.com/christopherpoole/CADMesh.git cadmesh_git \
-#    && mkdir cadmeshBuild \
-#    && cd cadmeshBuild \
-#    && cmake ../cadmesh -DCMAKE_CXX_FLAGS=-fPIC -DCMAKE_INSTALL_PREFIX:PATH=$MLIBRARY -DCMAKE_PREFIX_PATH=$JLAB_SOFTWARE/geant4/$GEANT4_VERSION \
-#    && make -j$(nproc) \
-#    && make install
+## mlibrary
+RUN git clone https://github.com/gemc/mlibrary.git $MLIBRARY \
+    && cd $MLIBRARY \
+    && rm -rf .git* \
+    && scons -j$(nproc) OPT=1
 
 ## gemc
-ENV GEMC_VERSION devel
-ENV GEMC $JLAB_SOFTWARE/gemc/$GEMC_VERSION
-
-RUN mkdir -p $GEMC && cd $GEMC \
-    && git clone https://github.com/gemc/source.git $GEMC/github-source
-
-COPY gemc.cc $GEMC/github-source/gemc.cc
-COPY CMakeLists_gemc.txt $GEMC/github-source/CMakeLists.txt
-###RUN cd $GEMC/github-source \
-###    && mkdir build && cd build \
-###    && cmake .. -DCMAKE_INSTALL_PREFIX=$GEMC \
-###    && make -j$(nproc) \
-###    && make install
+RUN mkdir -p $GEMC \
+    && git clone https://github.com/gemc/source.git $GEMC \
+    && cd $GEMC \
+    && rm -rf .git* \
+    && scons -j$(nproc) OPT=1
 
 ##Banks
-#ENV BANKS_VERSION devel
-#ENV PYTHONPATH /opt/jlab_software/devel/scons_bm/devel
+RUN mkdir -p $JLAB_SOFTWARE/banks \
+    && cd $JLAB_SOFTWARE/banks \
+    && curl -o banks-$BANKS_VERSION.tar.gz $BASE_URL/banks/banks-$BANKS_VERSION.tar.gz \
+    && tar -xvf banks-$BANKS_VERSION.tar.gz \
+    && rm -rf banks-$BANKS_VERSION.tar.gz \
+    && cd $BANKS_VERSION \
+    && scons -j$(nproc) OPT=1
 
-#RUN mkdir -p $JLAB_SOFTWARE/banks \
-#    && cd $JLAB_SOFTWARE/banks \
-#    && curl -o banks-$BANKS_VERSION.tar.gz $BASE_URL/banks/banks-$BANKS_VERSION.tar.gz \
-#    && tar -xvf banks-$BANKS_VERSION.tar.gz \
-#    && rm -rf banks-$BANKS_VERSION.tar.gz \
-#    && cd $BANKS_VERSION \
-#    && scons -j$(nproc) OPT=1
-
-##Jana
-#ENV JANA_VERSION devel
-#ENV JANA_HOME $JLAB_SOFTWARE/jana/$JANA_VERSION
-
-#RUN git clone https://github.com/JeffersonLab/JANA.git $JANA_HOME \
-#    && cd $JANA_HOME \
-#    && scons -j$(nproc)
+##JANA_HOME
+RUN git clone https://github.com/JeffersonLab/JANA.git $JANA_HOME \
+    && cd $JANA_HOME \
+    && rm -rf .git* \
+    && scons -j$(nproc)
 
 ## Fields
-#RUN mkdir -p $JLAB_ROOT/noarch/data \
-#   && cd $JLAB_ROOT/noarch/data \
-#   && rm -rf srr* clas12* \
-#   && curl -o clas12SolenoidFieldMap.dat http://clasweb.jlab.org/12gev/field_maps/clas12SolenoidFieldMap.dat \
-#   && curl -o clas12TorusOriginalMap.dat http://clasweb.jlab.org/12gev/field_maps/clas12TorusOriginalMap.dat
+RUN mkdir -p $JLAB_ROOT/noarch/data \
+   && cd $JLAB_ROOT/noarch/data \
+   && rm -rf srr* clas12* \
+   && curl -o clas12SolenoidFieldMap.dat http://clasweb.jlab.org/12gev/field_maps/clas12SolenoidFieldMap.dat \
+   && curl -o clas12TorusOriginalMap.dat http://clasweb.jlab.org/12gev/field_maps/clas12TorusOriginalMap.dat
 
 ## Clara/Coatjava
 #ENV CLARA_HOME $JLAB_SOFTWARE/clara
